--- a/style.css
+++ b/style.css
@@ -1167,7 +1167,7 @@ footer a:hover{
         width: 100%;
     }
     #banner {
-        width: 40vh;
+        width: 100%;
     }
     #sm-banner .banner-box {
         height: 40vh;
