--- a/style.css
+++ b/style.css
@@ -1164,7 +1164,7 @@ footer a:hover{
         margin: 0 0 15px 0;
     }
     #product1 .pro{
-        width: 40vh;
+        width: 100%;
     }
     #banner {
         width: 100%;
